--- a/STM32 files/MDP_V5.1/Release/makefile
+++ b/STM32 files/MDP_V5.1/Release/makefile
@@ -67,8 +67,8 @@ all: main-build
 main-build: MDP_V5.1.elf secondary-outputs
 
 # Tool invocations
-MDP_V5.1.elf MDP_V5.1.map: $(OBJS) $(USER_OBJS) C:\Users\Brook\STM32CubeIDE\workspace_1.10.1\MDP_V5.1\STM32F407VETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "MDP_V5.1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Brook\STM32CubeIDE\workspace_1.10.1\MDP_V5.1\STM32F407VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MDP_V5.1.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+MDP_V5.1.elf MDP_V5.1.map: $(OBJS) $(USER_OBJS) D:\Work\Projects\mdp-2022-prj\STM32\ files\MDP_V5.1\STM32F407VETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "MDP_V5.1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Work\Projects\mdp-2022-prj\STM32 files\MDP_V5.1\STM32F407VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MDP_V5.1.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
